# simple_linear_dynamic_system

./: .gitignore  Pipfile  main.py  pyproject.toml  pyvenv.cfg
