[tool.poetry]
name = "simple_linear_dynamic_analysis"
version = "0.1.0"
description = ""
authors = ["otakumesi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
