[tool.poetry]
name = "simple_linear_dynamic_analysis"
version = "0.1.0"
description = ""
authors = ["otakumesi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.1"
flake8 = "^3.7"
ipdb = "^0.12.2"
prompt_toolkit = "=2.0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
